--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,30 @@
-@import "utils";
-@import "fonts";
-@import "typography";
+@import "./utils/normalize";
+@import "./utils/reset";
+@import "./utils/fonts";
+@import "./utils/variables";
+@import "container";
+@import "header";
+@import "device";
+@import "presentation";
+@import "./bem-core/description-block.scss";
+@import "promo";
+@import "design";
+@import "technology";
+@import "./bem-core/review-block.scss";
+@import "mobile-nav.scss";
+@import "features.scss";
+@import "./bem-core/feature-item-block.scss";
+@import "question";
+@import "footer.scss";
+
+html {
+  font-family: "HelveticaNeueCyr", Helvetica, sans-serif;
+  font-weight: 400;
+  background: $mainBackgroundColor;
+  scroll-behavior: smooth;
+  overflow-x: hidden;
+}
 
 body {
-  background: $c-gray;
+  color: $strongGreyColor;
 }
